Changelog
=========

0.1.1 (Unreleased)
------------------

* Fixed egg dependency only to ``redturtle.video`` [keul]

0.1.0 (2011-05-12)
------------------

* Initial release (moved out from ``redturtle.video``)
* Support new ``youtu.be`` URLs
